# xge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  generate_pdf.py  pyproject.toml
config/: settings.yaml
src/xge/: __main__.py  config.py  main.py  models.py  models_funding.py  models_trading.py
src/xge/cache/: redis_cache.py
src/xge/collector/: base.py  funding_collector.py  ws_collector.py
src/xge/notifications/: email.py
src/xge/trading/: __init__.py  breakeven.py  delta_monitor.py  executor.py  metrics.py  pair_selector.py  position_manager.py  strategy.py  tier_config.py
src/xge/utils/: logger.py
tests/: test_breakeven.py  test_models.py  test_models_funding.py  test_models_trading.py  test_pair_selector.py  test_strategy.py
